--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "parcel-project-template",
+  "name": "filmoteka-project-vanilla-js-html-sass",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://mezochka.github.io/JS-project-07",
+  "homepage": "https://olekspyl.github.io/filmoteka-project-vanilla-js-html-sass",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /JS-project-07/"
+    "build": "parcel build src/*.html --public-url /filmoteka-project-vanilla-js-html-sass/"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/goitacademy/parcel-project-template.git"
+    "url": "git+https://github.com/olekspyl/filmoteka-project-vanilla-js-html-sass.git"
   },
   "keywords": [],
-  "author": "Alexander Repeta <alexander.repeta@gmail.com>",
+  "author": "Oleksandra Pylypchuk <lemocream@gmail.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/goitacademy/parcel-project-template/issues"
+    "url": "https://github.com/olekspyl/filmoteka-project-vanilla-js-html-sass/issues"
   },
   "dependencies": {
     "axios": "^0.27.2",
